tests/errors/syntax_errors/types_arg_type.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
from pyccel.decorators import types

@types(3)
def f(x):
    pass
